# school_app

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h  README.md
